# ComfyUI-Qwen2_5-VL

./: README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
example_workflows/: BatchImage.json  ComfyUI-Qwen2_5-VL.json
js/: wid.js
